--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -918,13 +918,13 @@ margin-left: 38px;
 	<details>
 	<summary>Determine the value of the residential property</summary>
       
-	<p>There are two ways to determine the value of a residential property.</p> 
+	<p>There are 2 ways to determine the value of a residential property.</p> 
 		<p>The general rule is to use its taxable value.</p>
 
 <details>
 <summary id="taxable-value">What is taxable value</summary>
 	<p>The taxable value of the residential property for a calendar year is the <strong>greater</strong> of the following amounts:</p>
-	<ul><li>The value of the residential property determined by an authority who establishes the assessed value of property for property tax purposes</li></ul>
+	<ul><li>The value of the residential property established by an authority that has the power to establish the assessed value of property for purposes of calculating a property tax </li></ul>
 	<ul><li>The residential property's most recent sale price, on or before December 31 of the calendar year</li></ul>
 
 	<p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091881">Calculating the tax payable using the taxable value</a></p>
@@ -934,7 +934,7 @@ margin-left: 38px;
 
 
 		
-		<p class="mrgn-tp-md">If you want to use the residential property's fair market value instead, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
+		<p class="mrgn-tp-md">If you want to use the residential property's fair market value to make your calculation, you must file a <a href="#FMV-election">Fair market value (FMV) election</a>.</p>
 
 
 
@@ -944,7 +944,7 @@ margin-left: 38px;
 
 	
 	<li><h3 id="part-3">Part 3 - Multiple residential properties</h3>
-<p>This part only applies to <strong>individuals</strong> who are <strong>not</strong> Canadian citizens or permanent residents, and who own more than one residential property.</p>
+<p>This part only applies to <strong>affected owners who are individuals</strong>, and who are <strong>not</strong> Canadian citizens or permanent residents of Canada. </p>
 		<details>
 			<summary>Section 1 - Multiple properties</summary>
 			<p>If you own more than one residential property in Canada on December 31, you <strong>must</strong> file a separate return for each property.</p>
@@ -954,16 +954,26 @@ margin-left: 38px;
 		<details>
 			<summary>Section 2 – Election to designate a residential property</summary>
 				<p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>no</strong> for line 310.</p>
-			<p><strong>Line 315</strong>: By answering yes, you are electing that you as the owner, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
+			<p><strong>Line 315</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This means you are declaring:</p>
+<ul>
+	<li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
+	<li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
+</ul>
+			
+			<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 		</details>
 
 
 		<details>
 			<summary>Section 3 – Joint election to designate a residential property</summary>
-		<p>Complete this section if you answered <strong>yes</strong> for line 310.</p>
-			<p><strong>Line 320</strong>: By answering yes, you are electing that both you and your spouse or common-law partner, as the owners, designate the residential property (completed in part 2) as either a primary place of residence or for qualifying occupancy.</p>
-<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
+		<p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>yes</strong> for line 310.</p>
+			<p><strong>Line 320</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This mean that you are declaring:</p>
+<ul>
+	<li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
+	<li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
+</ul>
+			
+			<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 
 			
 			
