--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -959,7 +959,7 @@ margin-left: 38px;
 	<li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
 	<li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
 </ul>
-			
+			<br>
 			<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 		</details>
 
@@ -967,12 +967,12 @@ margin-left: 38px;
 		<details>
 			<summary>Section 3 – Joint election to designate a residential property</summary>
 		<p>Complete this section if you answered <strong>yes</strong> for line 300, and <strong>yes</strong> for line 310.</p>
-			<p><strong>Line 320</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This mean that you are declaring:</p>
+			<p><strong>Line 320</strong>: By answering yes, you are designating the residential property (described in Part 2) for purposes of this election. This means you are declaring:</p>
 <ul>
 	<li>Only that one residential property can be considered as qualifying for the <strong>exemption for primary place of residence</strong></li>
 	<li>For only that one residential property can your personal occupancy of a dwelling unit (or the personal occupancy of your spouse or common-law partner) be considered as usable for the <strong>exemption for qualifying occupancy</strong></li>
 </ul>
-			
+			<br>
 			<p>You <strong>must</strong> fill out this section to be eligible for one of these 2 exemptions.</p>
 
 			
@@ -999,22 +999,27 @@ margin-left: 38px;
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
-		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
-		<p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
+<p>If you own multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> to be <strong>claim this exemption</strong>.</p>
+		
+			<p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
+		<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683">Exemption for residential properties that are used a primary place of residence</a> 
 </li>
 
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
-		<p>To be eligible for this exemption, you must file the election in <a href="#part-3">Part 3</a>, Section 2 or 3.</p>
+		If you are an individual who owns multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> for your personal occupancy to be included in a qualifying occupancy period. 
 	<p><a class="wb-lbx" href="#qual-occ-ajax">Qualifying <span class="nowrap">occupancy<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
-		
+	<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683">Exemption for residential properties that are used for qualifying occupancy</a> 
+	
 </li>
 
 
 	
 		<li><h3>Part 6 - Other exemptions</h3>
 <p>Complete this part if your ownership of the residential property is exempt for reasons <strong>other than</strong> primary place of residence or qualifying occupancy.</p>
+			<p>You may only select one exemption. </p>
+			<a href="https://test.canada.ca/cra-arc/subway/uht/who-file.html#h_1_3">Exemption eligibility for affected owners</a>
 </li>
 
 
