--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -999,7 +999,7 @@ margin-left: 38px;
 	
 	<li><h3>Part 4 - Exemption for primary place of residence</h3>
 		<p>Only owners who are <strong>individuals</strong> may qualify for this exemption.</p>
-<p>If you own multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> to be <strong>claim this exemption</strong>.</p>
+<p>If you own multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> to <strong>claim this exemption</strong>.</p>
 		
 			<p><a class="wb-lbx" href="#primary-res-ajax">Primary place of <span class="nowrap">residence<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
 		<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683">Exemption for residential properties that are used a primary place of residence</a> 
@@ -1008,7 +1008,7 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 5 - Exemption for qualifying occupancy</h3>
-		If you are an individual who owns multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> for your personal occupancy to be included in a qualifying occupancy period. 
+		<p>If you are an individual who owns multiple residential properties, or if you and your spouse or common-law partner (who is not a Canadian citizen or permanent resident) are owners of multiple residential properties, you <strong>must</strong> fill out the election in <a href="https://test.canada.ca/cra-arc/subway/uht/complete-return.html#part-3">Part 3</a> for your personal occupancy to be included in a qualifying occupancy period.</p> 
 	<p><a class="wb-lbx" href="#qual-occ-ajax">Qualifying <span class="nowrap">occupancy<span class="far fa-question-circle mrgn-lft-sm"></span></span></a></p>
 	<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683">Exemption for residential properties that are used for qualifying occupancy</a> 
 	
