--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1025,15 +1025,15 @@ margin-left: 38px;
 
 	
 	<li><h3 id="FMV-election">Part 7 - Fair market value (FMV) election</h3>
-		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property, instead of its <a href="#taxable-value">taxable value</a>.</p> 
+		<p>If you choose to make a FMV election for a particular residential property, you are electing to use the FMV of your property instead of its <a href="#taxable-value">taxable value</a> to calculate your tax payable for the calendar year.</p> 
 		<details>
 			<summary>Fair market value (FMV)</summary>
-<p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing the section.</p>
-<p>An owner electing to use fair market value has to get an appraisal of the property. The fair market value of your residential property must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the appraisal report must be to help in the administration of the Underused Housing Tax Act.</p>
+<p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing this section.</p>
+<p>An owner electing to use fair market value for the calculation, has to get an appraisal of the property. The appraisal report must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the written appraisal must be to help in the administration of the Underused Housing Tax Act.</p>
 	     
 
 <details>
-	<summary>Examples of approved appraisers</summary>
+	<summary>Acceptable Professional Associations and Designations </summary>
 	<ul>
 		<li>Appraisal Institute of Canada (AIC)</li>
 		<ul><li>Accredited Appraiser Canadian Institute (AACI)</li></ul>
@@ -1059,10 +1059,10 @@ margin-left: 38px;
 
 	
 	<li><h3>Part 8 - Calculation of tax payable</h3>
-	<p>If your ownership of a residential property does not qualify for an exemption from the tax for a calendar year, you must calculate what you owe.</p>
+	<p>If your ownership of a residential property does not qualify for an exemption from paying the tax for a calendar year, you must calculate what you owe.</p>
 	
-		<details>
-<summary>Calculation</summary>
+		
+
 		<p>The Underused Housing Tax rate is 1%.</p>
 			<p>To calculate what you owe, multiply the value of the residential property by the tax rate. Then multiply that result by your ownership percentage of the property.</p>
 		 <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
@@ -1073,17 +1073,15 @@ margin-left: 38px;
     </ul>
     <details>
     <summary>Calculation example</summary>
-    <p>In 2023, the value of the residential property is $500,000. You are 1 of 2 owners, who equally share ownership as indicated in the land registration system.</p>
+    <p>For the 2023 calendar year, the value of the residential property is $500,000. You are 1 of 2 owners indicated in the land registration system.</p>
    <ul class="fa-ul lst-spcd mrgn-tp-lg mrgn-bttm-lg mrgn-lft-xl max-content">
       <li><span class="fa-li"><span class="fas fa-square fa-lg fa-inverse"></span></span><span class="h6">$500,000 (Value of the property)</span></li>
       <li><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">1% (Underused Housing Tax rate)</span> </li>
       <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Your ownership percentage)</span></li>
-      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,000 (Underused Housing Tax amount owed for 2023)</span></li>
+      <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,500 (Underused Housing Tax amount owed for the 2023 calendar year)</span></li>
     </ul>
     </details>
-		
-	</details>
-		
+	<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091879">Calculating tax payable</a>
 		
 
 	</li>
