--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1029,7 +1029,7 @@ margin-left: 38px;
 		<details>
 			<summary>Fair market value (FMV)</summary>
 <p>To calculate the tax you owe using the fair market value of a residential property, you must file an election by completing this section.</p>
-<p>An owner electing to use fair market value for the calculation, has to get an appraisal of the property. The appraisal report must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the written appraisal must be to help in the administration of the Underused Housing Tax Act.</p>
+<p>An owner electing to use fair market value for the calculation, has to get a <strong>written appraisal</strong> of the property. The written appraisal must be determined by an accredited, professional, real estate appraiser operating at arm’s length to the owner. The intended use of the written appraisal must be to help in the administration of the Underused Housing Tax Act.</p>
 	     
 
 <details>
@@ -1044,7 +1044,7 @@ margin-left: 38px;
 		<li>Ordre des évaluateurs agréés du Québec (OEAQ)</li>
 		<ul><li>Chartered Appraiser (C.App./É.A.)</li></ul>
 	</ul>
-<p class="mrgn-tp-md">If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a></p>
+<p class="mrgn-tp-md">If you have an appraisal report from an appraiser that does not have a designation from one of these associations and need further clarification, please <a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">contact the CRA</a>.</p>
 	
 </details>
      <p class="mrgn-tp-md">For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091883">Calculating the tax payable using the FMV</a>.</p>
@@ -1080,9 +1080,9 @@ margin-left: 38px;
       <li class="brdr-bttm"><span class="fa-li"><span class="h2">&#xd7;</span><span class="wb-inv"> times </span></span><span class="h6">50% (Your ownership percentage)</span></li>
       <li><span class="fa-li"><span class="h2">=</span><span class="wb-inv"> equals </span></span> <span class="h6">$2,500 (Underused Housing Tax amount owed for the 2023 calendar year)</span></li>
     </ul>
+	    For more detailed information, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091879">Calculating tax payable</a>
     </details>
-	<a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn2/calculating-underused-housing-tax-payable.html#_Toc122091879">Calculating tax payable</a>
-		
+
 
 	</li>
 
