--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1096,8 +1096,9 @@ html:lang(fr) .cnjnctn-or:before {
 	</div>  
 	<h4 id="qual-occ">Qualifying occupancy</h4>	
 <div id="qual-occ-content">
-		    <p>Qualifying occupancy applies to situations where your ownership of a residential property has one or more qualifying occupancy periods totalling at least 180 days in the calendar year. </p>
-		    <p>A qualifying occupancy period is at least 1 month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. Qualifying occupancy periods can be longer than 1 month, but not shorter than 1 month.</p>
+		    <p>Qualifying occupancy applies to situations where your ownership of a residential property <strong>has one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
+		    <p>A qualifying occupancy period is at least one month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. </p>
+	<p>A qualifying occupancy period is <strong>28 days or longer</strong>.</p>
 
 
                 <p>A qualifying occupant is:</p>
@@ -1111,8 +1112,14 @@ html:lang(fr) .cnjnctn-or:before {
               
 		    <details>
 	<summary class="mrgn-tp-md">Example of qualifying occupancy</summary>
-	<p>You own a residential property. Your parent, who is a Canadian citizen, lives at the property during the months of March - April, June - August, and November - December.</p>
-	<p>In 2023, they lived there for a total of 197 days, making you qualify for the exemption of qualifying occupany.</p>
+	<p>You are a non-resident of Canada who owns a residential property. </p>
+			    <p>In 2023, your spouse, a Canadian citizen, lived at the property from:<p>
+	<ul>
+		<li>March 1 - April 14</li>
+		<li>June 1 - August 31</li>
+		<li>November 1 - December 30</li>
+	</ul>
+			    <p>Your spouse lived at your residential property for a total of 197 days, making you qualify for the exemption of qualifying occupancy.</p>
 </details>
 
 	
