--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1098,7 +1098,7 @@ html:lang(fr) .cnjnctn-or:before {
 <div id="qual-occ-content">
 		    <p>Qualifying occupancy applies to situations where your ownership of a residential property <strong>has one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
 		    <p>A qualifying occupancy period is at least one month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. </p>
-	<p>A qualifying occupancy period is <strong>28 days or longer</strong>.</p>
+	<p>Qualifying occupancy periods can be <strong>28 days or longer</strong>.</p>
 
 
                 <p>A qualifying occupant is:</p>
