--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -795,21 +795,22 @@ html:lang(fr) .cnjnctn-or:before {
 
 	  
     <details>
-      <summary>Who is considered an owner</summary>
-      <p>You are an owner of a residential property if any of these statements are true.</p>
+      <summary>Who is an owner</summary>
+      <p>You are an owner of residential property if you are:</p>
 	    <p>You are:</p>
       <ul>
-        <li>Identified and considered as an owner of the property in the land registration system where the property is located</li>
-        <li>A life tenant under a life estate in the property</li>
-        <li>A life lease holder of the property</li>
-        <li>A lessee that has continuous possession of the land on which the property is situated under a long-term lease</li>
+        <li>Identified as, or considered to be, an owner of the residential property in the land registration system where the residential property is located</li>
+        <li>A life tenant under a life estate in the residential property</li>
+        <li>A life lease holder of the residential property</li>
+        <li>A lessee that has continuous possession of the land on which the residential property is situated under a long-term lease</li>
       </ul>
       <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153">Owner of residential property</a></p>
     </details>
     <br>
-    <p>In most situations, if you are an <strong>affected owner</strong>, you must also pay the tax for each residential property you own, unless you qualify for an exemption.</p>
-	  <p>If you qualify for an exemption, you must select the exemption on your return(s). If you qualify for an exemption, you will not have to pay the tax.</p>
-    <p>If you share ownership with one or more co-owners who are also affected owners, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
+    <p>If you are an <strong>affected owner</strong>, you must also pay the tax for each residential property you own, unless you qualify for an exemption.</p>
+	  <p>To claim an exemption, you must select the exemption on your return. If your ownership qualifies for an exemption, you will not have to pay the tax.</p>
+    <p>If you are one of several affected owners of the residential property, <strong>each</strong> of you must file a separate return for the property, even if your respective ownership qualifies for an exemption.</p>
+	 <p> As an affected owner, even if your ownership qualifies for an exemption, you <strong>must still file an annual return</strong>.</p>
     <p>If you are not an affected owner, you are an <strong>excluded owner</strong>. Excluded owners do not have to file a return or pay the tax. </p>
   
 	  
