--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -798,7 +798,10 @@ margin-left: 38px;
         <h2 class="h3 mrgn-tp-0">Online</h2>
       </dt>
       <dd>
-        <p><strong>Individuals</strong> - Use your CRA My Account to:</p>
+        <p>Canadian citizens and permanent residents only</p>
+	   <details>
+		   <summary>Individuals </summary>
+	      <p>Use CRA My Account for Individuals to:</p>
         <ul>
           <li>file your Underused Housing Tax return</li>
           <li>update your personal information,  including your address and your marital status</li>
@@ -806,6 +809,7 @@ margin-left: 38px;
         </ul>
         <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign
           in to CRA My Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register<span class="wb-inv">for CRA My Account</span></a></div>
+      </details>   
       </dd>
       <dd>
         <p><strong>Businesses</strong> - Use your CRA My Business Account to:</p>
