--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -798,7 +798,7 @@ margin-left: 38px;
         <h2 class="h3 mrgn-tp-0">Online</h2>
       </dt>
       <dd>
-        <p>Canadian citizens and permanent residents only</p>
+        <p><strong>Canadian citizens and permanent residents only</strong></p>
 	   <details>
 		   <summary>Individuals </summary>
 	      <p>Use CRA My Account for Individuals to:</p>
@@ -812,7 +812,9 @@ margin-left: 38px;
       </details>   
       </dd>
       <dd>
-        <p><strong>Businesses</strong> - Use your CRA My Business Account to:</p>
+	       <details>
+		   <summary>Businesses</summary>
+        <p>Use your CRA My Business Account to:</p>
         <ul>
           <li>file the Underused Housing Tax return  for your business</li>
           <li>update your business information,  including your address and banking information</li>
@@ -820,7 +822,35 @@ margin-left: 38px;
         </ul>
         <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign
           in to My Business Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html" class="mrgn-lft-md">Register<span class="wb-inv"> for My Business Account</span></a></div>
+	       </details>
       </dd>
+
+
+  <dd>
+	       <details>
+		   <summary>Representatives</summary>
+        <p>Use your CRA Represent a Client to:</p>
+        <ul>
+          <li>file the Underused Housing Tax return  for your client</li>
+          <li>update your client's personal information</li>
+          <li>update your client's direct deposit information</li>
+        </ul>
+        <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html">Sign
+          in to Represent a Client</a></p>
+		<p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1e" class="mrgn-lft-md">Register - representatives in Canada</a></div>
+	      <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/cra-login-services/cra-user-password-help-faqs/registration-process-access-cra-login-services.html#hlp1f" class="mrgn-lft-md">Register - non-resident representatives</a></div>
+	     
+	       </details>
+      </dd>
+
+
+
+
+
+
+
+
+		  
       <dt>
         <h2 class="h3 mrgn-tp-0">By phone</h2>
       </dt>
