--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -798,7 +798,7 @@ margin-left: 38px;
         <h2 class="h3 mrgn-tp-0">Online</h2>
       </dt>
       <dd>
-        <p><strong>Canadian citizens and permanent residents only</strong></p>
+        <p>This option is available to <strong>Canadian citizens and permanent residents only</strong></p>
 	   <details>
 		   <summary>Individuals </summary>
 	      <p>Use CRA My Account for Individuals to:</p>
