--- a/fhsa/v4/death.html
+++ b/fhsa/v4/death.html
@@ -51,6 +51,10 @@
                 title: "First Home Savings Account (FHSA)",
                 href: "index.html"
               }
+			    },{
+                title: "Life events and FHSAs",
+                href: "lifeevents.html"
+              }
               ],
               search: true,
               siteMenu: true,
