--- a/fhsa/v4/marriage.html
+++ b/fhsa/v4/marriage.html
@@ -279,6 +279,9 @@
               },{
                 title: "First Home Savings Account (FHSA)",
                 href: "index.html"
+		       },{
+                title: "Life events and FHSAs",
+                href: "lifeevents.html"
               }
               ],
               search: true,
