--- a/fhsa/v4/transfersin.html
+++ b/fhsa/v4/transfersin.html
@@ -336,7 +336,7 @@
 
 </div>
  <h2 id="h-3">Transfers between your FHSAs</h2>
-		     <p>To complete a <strong>direct</strong> transfer between your FHSAs, you must fill out a transfer form and give it to your financial institution.&nbsp;<span class="label label-info">This form will be available at a later date.</span></p>
+		     <p>To complete a <strong>direct</strong> transfer between your FHSAs, you must fill out Form&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc721.html">RC721, Transfer from your FHSA to your FHSA, RRSP or RRIF</a> and give it to your financial institution.</p>
 
 <p>If you make a direct transfer between your FHSAs, the transfer will <strong>not</strong> reduce your unused FHSA participation room.</p>
 <p>If you withdraw the property from your FHSA yourself and contribute the same property to another FHSA of yours, this transaction would <strong>not</strong> be considered a direct transfer. The amount will be treated as a new contribution to your other FHSA, which will reduce your unused FHSA participation room in the year of the new contribution and may cause you to have an excess FHSA amount.</p>
@@ -369,7 +369,7 @@
 <p><strong>For Patrick’s FHSA transfer to have no tax consequences</strong>:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Bank A must complete a <strong>direct transfer</strong> of the property to Bank B</li>
-<li class="cnjnctn-col">Patrick must <strong>not</strong> withdraw the property himself, but must fill out the transfer form and bring it to his financial institution in order to complete the direct transfer</li>
+<li class="cnjnctn-col">Patrick must <strong>not</strong> withdraw the property himself, but must fill outForm&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc721.html">RC721, Transfer from your FHSA to your FHSA, RRSP or RRIF</a> and bring it to his financial institution in order to complete the direct transfer</li>
 </ul>
 
     
