--- a/fhsa/v4/marriage.html
+++ b/fhsa/v4/marriage.html
@@ -373,7 +373,7 @@
 
     
         <p>Jordan and Kinsley divorced in 2023. By order of a competent tribunal, Jordan must pay 50% of the FMV of his FHSA to Kinsley. At the time of the transfer, Jordan’s FHSA had a FMV of $6,000. Both Jordan and Kinsley have existing FHSAs and Jordan did not have an excess FHSA amount at the time of the transfer.</p>
-<p>Jordan filled out the form Form&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc723.html">RC723, Transfer from an FHSA to another FHSA, RRSP or RRIF on Breakdown of Marriage or Common-law Partnership</a> and gave it to Kinsley's FHSA issuer. Once the form was completed by Kinsley's and Jordan's FHSA issuers, Jordan's FHSA issuer directly transferred $3,000 to Kinsley’s FHSA.&nbsp;</p>
+<p>Jordan filled out Form&nbsp;<a href="/en/revenue-agency/services/forms-publications/forms/rc723.html">RC723, Transfer from an FHSA to another FHSA, RRSP or RRIF on Breakdown of Marriage or Common-law Partnership</a> and gave it to Kinsley's FHSA issuer. Once the form was completed by Kinsley's and Jordan's FHSA issuers, Jordan's FHSA issuer directly transferred $3,000 to Kinsley’s FHSA.&nbsp;</p>
 <p>The direct transfer will have no impact on either Jordan’s or Kinsley’s unused FHSA participation room, and there will be no immediate tax consequences.</p>
 
     
