--- a/subway/uht/contact.html
+++ b/subway/uht/contact.html
@@ -775,7 +775,7 @@ html:lang(fr) .cnjnctn-or:before {
             <li>update your direct deposit information</li>
           </ul>
           <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign
-            in to CRA My Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register<span class="wb-inv">for CRA My Account</span></a></div>
+            in to My Account</a> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register<span class="wb-inv">for CRA My Account</span></a></div>
         </details>
         <details class="mrgn-tp-md">
           <summary>Businesses</summary>
