ex/hides online

--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -827,11 +827,23 @@ margin-left: 38px;
 
 <details>
 	<summary>If you are an individual</summary>
-	<p>When making your payment through My Payment, you may <strong>only</strong> use the "Underused Housing Tax" option.</p>
+<ul>
+	<li>Select "Pay now"</li>
+	<li>Under Individuals, select “Individual income tax (T1)”</li>
+	<li>Select “Underused Housing Tax” </li>
+
+</ul>
+
+
+	
 </details>
 <details>
 	<summary>If you are a corporation</summary>
-	<p>When making your payment through My Payment, you may <strong>only</strong> use “amount owing” or “payment on filing” options.</p>
+	<li>Select "Pay now"</li>
+	<li>Under Businesses, select “Underused Housing Tax” </li>
+	<li>Select either:</li>
+	<ul><li>“Payment on filing” (to make your payment when filing your return)</li></ul>
+	<ul><li>“Amount owing” (to pay an amount owing from your notice of (re) assessment, statement, or letters issued by the CRA)</li></ul>
 <p>As a corporation, you may also pay using either of the following methods:</p>
 <ul>
 
