testing ex/hides

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -944,7 +944,7 @@ html:lang(fr) .cnjnctn-or:before {
                 <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
                   <div class="wb-fieldflow-header">
                     <div class="gc-font-2019">
-                      <p class="wb-fieldflow-label">Is your property: </p>
+                      <p class="wb-fieldflow-label">Is your property one of the following: </p>
                       <div data-ajax-replace="#exp-2" class="gc-font-2019 mrgn-bttm-md"></div>
                     </div>
                   </div>
@@ -1087,15 +1087,19 @@ html:lang(fr) .cnjnctn-or:before {
         <p>Used for qualifying occupancy</p>
       </li>
   </ul>
-
-<h4 id="primary-res">Primary place of residence</h4>
+<details>
+<summary id="primary-res">Primary place of residence</summary>
 	<div id="primary-res-content">
 		    <p>A primary place of residence is a dwelling unit that is part of the residential property, occupied by you or your spouse or common-law partner, or for your child who is attending a designated learning institution.</p>
 <p>If you have more than one place of residence, your primary place of residence is the one that is first in order of importance to you.</p>
 <p>Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423684" target="_blank">Primary place of residence</a></p>
 	<p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn6/exemption-primary-place-residence.html#_Toc122423683 target="_blank"">Exemption for residential properties that are used a primary place of residence</a></p>
+	</details>
 	</div>  
-	<h4 id="qual-occ">Qualifying occupancy</h4>	
+
+
+	<details>
+	<summary id="qual-occ">Qualifying occupancy</summary>	
 <div id="qual-occ-content">
 		    <p>Qualifying occupancy applies to situations where your ownership of a residential property <strong>has one or more</strong> qualifying occupancy periods totalling at least <strong>180 days</strong> in the calendar year. </p>
 		    <p>A qualifying occupancy period is at least one month in a calendar year where certain individuals (qualifying occupants) have continuous occupancy. </p>
@@ -1126,11 +1130,11 @@ html:lang(fr) .cnjnctn-or:before {
 	
 <p class="mrgn-tp-lg">Read more: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423684" target="_blank">Qualifying occupancy period</a></p>
 			  <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn7/exemption-qualifying-occupancy.html#_Toc122423683" target="_blank">Exemption for residential properties that are used for qualifying occupancy</a></p>
-             
+	  
 </div>
             </div>
           </details>
-
+</details>    
 
 
 		    
