--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1170,7 +1170,7 @@ html:lang(fr) .cnjnctn-or:before {
      
 <br>
 		      <p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
-		    <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html#bymail">Contact us to make a request</a></p>
+		    <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">Contact us</a></p>
 
       
            </div>
